--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,5 +16,14 @@
         "test/**/*.ts",
         "typings/browser.d.ts"
     ],
-    "files": []
+    "files": [
+        "app/src/models/models.d.ts",
+        "typings/browser.d.ts",
+        "app/src/app/app.ts",
+        "app/src/main.ts",
+        "app/src/repositories/base/base.repo.ts",
+        "app/src/services/base/base.svc.ts",
+        "app/src/viewcontrols/base/base.vc.ts",
+        "app/src/viewcontrols/home/home.vc.ts"
+    ]
 }
